# Chess-1

./: CMakeLists.txt  LICENSE  README.md
include/: bishop.h  board.h  king.h  knight.h  move.h  pawn.h  piece.h  rook.h
include/chess/controller/: ChessController.hpp
include/chess/controller/gamemode/: ClassicMode.hpp  IGamemode.hpp
include/chess/model/board/: Board.hpp
include/chess/model/enums/: Team.hpp
include/chess/model/manager/: TextureManager.hpp
include/chess/model/piece/: Piece.hpp  PieceType.hpp
include/chess/model/piece/strategy/: BishopMove.hpp  IMoveStrategy.hpp  KingMove.hpp  KnightMove.hpp  PawnMove.hpp  RookMove.hpp
include/chess/model/piece/type/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  PieceType.hpp  Queen.hpp  Rook.hpp
include/chess/utils/: Unit.hpp
include/chess/view/: Palette.hpp  Theme.hpp
src/: TextureManager.cpp  bishop.cpp  board.cpp  king.cpp  knight.cpp  main.cpp  move.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
